--- a/src/components/Perfil/Style.css
+++ b/src/components/Perfil/Style.css
@@ -1,6 +1,15 @@
 .infoWrapper{
     display: flex;
     min-height: 40vh;
-    flex-direction: column;
+    flex-direction: row;
     padding: 1rem 0;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
+.otherinfocenter{
+  margin: auto;
+  width: auto;
+  padding: 10px;
 }
