--- a/src/main.css
+++ b/src/main.css
@@ -6,3 +6,115 @@ body, html {
 #root {
   height: 100%
 }
+
+.basicInfo {
+  flex: 1;
+  margin-bottom: 40px;
+  margin: auto;
+  width: auto;
+  padding: 10px;
+}
+
+.profilePic{
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: #eee;
+  margin: 1rem auto 2rem auto;
+}
+.nameWrapper{
+    text-align: center;
+    font-size: 1rem;
+}
+
+.otherInfo{
+  flex: 3;
+}
+
+.lIWrapper, .cIWrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+
+.contactInfo{
+  margin-top: 2rem;
+  padding-bottom: 1rem;
+}
+.heading{
+  display: flex;
+}
+h3{
+    flex: 1;
+}
+  button{
+    padding: 0 !important;
+    background: transparent;
+    color: grey;
+    border: none;
+    line-height: 1;
+    font-weight: 500;
+    font-size: .9rem;
+    text-transform: uppercase;
+    transition: color .3s;
+    cursor: pointer;
+  }
+.inputWrapper{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+p.inputData{
+  padding: .5rem 1rem;
+  color: grey;
+  margin: 1rem 0;
+  font-size: .9rem;
+  font-weight: 400;
+  border-bottom: solid 2px transparent;
+  background: #fff;
+}
+.cancelBtn{
+  margin-left: 1rem;
+}
+
+.ant-input {
+  outline: 0;
+  border-width: 0 0 1px;
+  border-color: gainsboro;
+  background-color: transparent;
+}
+
+.otherinfocolumn{
+  display: flex;
+  flex-direction: row;
+}
+
+.infoWrapper{
+  display: flex;
+  min-height: 40vh;
+  flex-direction: row;
+  padding: 1rem 0;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+.otherinfocenter{
+margin: auto;
+width: auto;
+padding: 10px;
+}
+
+.row {
+  display: flex; /* equal height of the children */
+}
+
+.col {
+  flex: 1; /* additionally, equal width */
+  padding: 1em;
+  border: none;
+}
+.noHover{
+  pointer-events: none;
+}
