--- a/src/main.css
+++ b/src/main.css
@@ -48,6 +48,18 @@ body, html {
   justify-content: space-between;
 }
 
+.centerDiv{
+  margin: auto;
+  width: 50%;
+  padding: 100px;
+}
+
+.directions-flex-div{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 .contactInfo{
   margin-top: 2rem;
