--- a/src/main.css
+++ b/src/main.css
@@ -229,7 +229,6 @@ label {
   margin: 20px 0;
   margin-bottom: 20px;
   padding: 30px 50px;
-  text-align: center;
-  background: rgba(0, 0, 0, 0.05);
+  background: rgb(255, 255, 255);
   border-radius: 4px;
 }
